Added Spark installation